[tool.poetry]
name = "downtime_analysis"
version = "0.1.0"
description = ""
authors = ["Fernando Akio Pucci"]
license = "\\"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ray = {extras = ["serve"], version = "^2.39.0"}
virtualenv = "^20.28.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
